--- a/style.css
+++ b/style.css
@@ -7,3 +7,50 @@
     --cor4: #015958;
     --cor5: #023535;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: var(--cor1);
+}
+
+.fundo {
+    background-color: var(--cor5);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    background-color: transparent;
+    backdrop-filter: blur(20px);
+    padding: 25px;
+    border-radius: 25px;
+}
+
+.texto {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2em;
+    color: var(--cor1);
+    margin: 50px 20px;
+}
+
+.login {
+    text-align: center;
+}
+
+input {
+    margin: 10px 0px;
+    width: 60%;
+    padding: 5px;
+    border: var(--cor5) solid 1px;
+    border-radius: 20px;
+}
+
+i {
+    transform: translate(-30px, 2px);
+}
