--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
 
 .fundo {
     background-color: var(--cor5);
+    background-image: url(imagens/Papeis\ De\ Parede\ Computador.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     min-height: 100vh;
     display: flex;
     align-items: center;
