--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .fundo {
     background-color: var(--cor5);
-    background-image: url(imagens/Papeis\ De\ Parede\ Computador.jpg);
+    background-image: url(imagens/fundo02.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -39,7 +39,7 @@ body {
 .texto {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2em;
-    color: var(--cor1);
+    color: white;
     margin: 50px 20px;
 }
 
