--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 * {
     margin: 0;
     padding: 0;
+    cursor: url(imagens/cursor.gif), default;
 }
 
 body {
@@ -50,11 +51,19 @@ body {
 input {
     margin: 10px 0px;
     width: 60%;
-    padding: 5px;
+    padding: 8px;
     border: var(--cor5) solid 1px;
     border-radius: 20px;
 }
 
 i {
     transform: translate(-30px, 2px);
+}
+
+button {
+    width: 80%;
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 20px;
+    transform: translateX(-8px);
 }
